# primitive_database

./: .gitignore  Makefile  README.MD  db_meta.json  pyproject.toml
data/: products.json  users.json
src/primitive_db/: core.py  decorators.py  engine.py  main.py  utils.py
