[tool.poetry]
name = "project2-shevchenko-sergey"
version = "0.1.0"
description = ""
authors = ["sunpieeyes <revaginiti@gmail.com>"]
readme = "README.md"

packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12"
prompt = "^0.4.1"
prettytable = "^3.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.6"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
